--- a/internal/eslint/package.json
+++ b/internal/eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@spark/eslint",
+  "name": "@spark/internal-eslint",
   "version": "0.0.1",
   "scripts": {
     "build": "unbuild",
@@ -22,8 +22,10 @@
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsonc": "^2.18.2",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.32.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.4.2",
     "typescript": "^5.7.3",
     "unbuild": "^3.2.0"
