--- a/package.json
+++ b/package.json
@@ -6,22 +6,34 @@
   "scripts": {
     "build": "pnpm -r build",
     "test": "pnpm -r test",
-    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx,.md,.json --max-warnings 0 --cache"
+    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx,.md,.json --max-warnings 0 --cache",
+    "lint:style": "stylelint '**/*.{css,scss}'",
+    "test:unit": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@spark/internal-constant": "workspace:^",
     "@spark/internal-utils": "workspace:^",
     "@spark/utils": "workspace:^",
     "fast-glob": "^3.3.3",
+    "lodash-unified": "^1.0.3",
     "vitest": "^2.1.8",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
-    "@spark/internal-eslint": "workspace:^",
+    "@spark/internal-lint": "workspace:^",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.5",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vitest/coverage-v8": "^1.2.0",
+    "@vitest/ui": "^1.2.0",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^9.17.0"
+    "eslint": "^9.17.0",
+    "jsdom": "^24.0.0",
+    "stylelint": "^16.12.0",
+    "vitest": "^1.2.0"
   }
 }
