--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
   "references": [
     { "path": "./tsconfig.web.json" },
     { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.vitest.json" }
+    { "path": "./tsconfig.test.json" }
   ]
 }
