--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,12 @@
   ],
   "eslint.probe": [],
   "eslint.enable": true,
-  "prettier.enable": false
+  "prettier.enable": false,
+
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "tsconfig.json": "tsconfig.*.json, env.d.ts",
+    "vite.config.*": "jsconfig*, vitest.config.*, cypress.config.*, playwright.config.*",
+    "package.json": "package-lock.json, pnpm*, eslint*, .prettier*, prettier*, commitlint.config.ts, stylelint.config.*"
+  }
 }
