--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spark",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@9.9.0",
   "type": "module",
   "scripts": {
     "build": "pnpm -r build",
@@ -13,7 +14,10 @@
     "test:ui": "vitest --ui",
     "prepare": "husky install",
     "commit": "git-cz",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "tree": "tree -I 'node_modules|.git|.DS_Store|dist'",
+    "format": "prettier --write .",
+    "build:turbo": "turbo run build"
   },
   "dependencies": {
     "@spark/internal-constant": "workspace:^",
@@ -44,6 +48,7 @@
     "jsdom": "^24.0.0",
     "lint-staged": "^15.0.0",
     "stylelint": "^16.12.0",
+    "turbo": "^2.3.3",
     "vitest": "^1.2.0"
   },
   "config": {
