chore: Update project configuration and dependencies

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -7,7 +7,7 @@
     "types": [],
     "skipLibCheck": true
   },
-  "include": ["packages", "typings/env.d.ts"],
+  "include": ["packages", "typings/env.d.ts", "play"],
   "exclude": [
     "node_modules",
     "**/dist",
