--- a/internal/lint/package.json
+++ b/internal/lint/package.json
@@ -39,6 +39,7 @@
     "jsonc-eslint-parser": "^2.4.0",
     "prettier": "^3.4.2",
     "stylelint": "^16.12.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
     "stylelint-order": "^6.0.4",
