--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "type": "module",
   "scripts": {
     "build": "pnpm -r build",
-    "test": "pnpm -r test",
+    "build:turbo": "turbo run build",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "clean": "pnpm run clean:dist && pnpm run -r --parallel clean",
+    "clean:dist": "rimraf dist",
+    "commit": "git-cz",
+    "format": "prettier --write .",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
     "lint:style": "stylelint \"**/*.{vue,css,scss}\" --fix",
-    "test:unit": "vitest",
+    "prepare": "husky install",
+    "test": "pnpm -r test",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-    "prepare": "husky install",
-    "commit": "git-cz",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "tree": "tree -I 'node_modules|.git|.DS_Store|dist'",
-    "format": "prettier --write .",
-    "build:turbo": "turbo run build"
+    "test:unit": "vitest",
+    "tree": "tree -I 'node_modules|.git|.DS_Store|dist'"
   },
   "dependencies": {
     "@spark/internal-constant": "workspace:^",
