--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 shamefully-hoist=true
 strict-peer-dependencies=false
 shell-emulator=true
-registry=http://localhost:4873
+# registry=http://localhost:4873
