--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,9 @@
 {
   "name": "@spark/components",
   "version": "0.0.1",
-  "scripts": {}
+  "scripts": {},
+  "dependencies": {
+    "lodash-unified": "^1.0.3",
+    "vue": "^3.5.13"
+  }
 }
