--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,5 +3,8 @@
   "version": "0.1.0",
   "main": "index.ts",
   "types": "index.ts",
-  "scripts": {}
+  "scripts": {},
+  "dependencies": {
+    "vue": "^3.5.13"
+  }
 }
