chore: Update project documentation and configurations

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean:dist": "rimraf dist",
     "commit": "git-cz",
     "format": "prettier --write .",
-    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
+    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx,.md,.json --max-warnings 0 --cache",
+    "lint:fix": "pnpm run lint --fix",
     "lint:style": "stylelint \"**/*.{vue,css,scss}\" --fix",
     "prepare": "husky install",
     "test": "pnpm -r test",
