--- a/internal/lint/package.json
+++ b/internal/lint/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "unbuild --stub",
+    "clean": "rimraf dist",
     "build": "unbuild"
   },
   "files": [
