--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,5 +5,9 @@
   "dependencies": {
     "lodash-unified": "^1.0.3",
     "vue": "^3.5.13"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
