--- a/internal/lint/package.json
+++ b/internal/lint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@spark/internal-lint",
+  "name": "@fly/internal-lint",
   "version": "0.0.1",
   "scripts": {
     "dev": "unbuild --stub",
