--- a/internal/utils/package.json
+++ b/internal/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@spark/internal-utils",
+  "name": "@fly/internal-utils",
   "version": "0.0.1",
   "scripts": {
     "dev": "unbuild --stub",
