--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,8 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@spark/*-test", "@spark/docs"]
-} 
+  "ignore": [
+    "@fly/*-test",
+    "@fly/docs"
+  ]
+}
